--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -18,7 +18,7 @@
 
 		  <div class="form-group">
 
-		    <label for="confirm">Confirm Password</label>
+		    <label for="confirm">Confirm Your Password</label>
 
 		    <input type="password" name="confirm" value="" placeholder="Confirm password" class="form-control"/>
 
